<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_fave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="9dp"
            android:src="@drawable/ic_not_favorite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="toggleFavorite"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_fave"
            />
        </android.support.constraint.ConstraintLayout>
        <ImageView
            android:id="@+id/iv_big_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/big_picture_desc"
            app:layout_constraintTop_toBottomOf="@id/cl_header"
            />

        <ImageView
            android:id="@+id/divider"
            android:contentDescription="@string/divider_desc"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_big_poster"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            style="@style/DetailInfo"
            app:layout_constraintTop_toBottomOf="@id/iv_big_poster"
            />

        <TextView
            android:id="@+id/tv_vote_avg_caption"
            style="@style/DetailCaptions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/tv_summary"
            android:text="@string/vote_avg"
            />
        <TextView
            android:id="@+id/tv_vote_avg"
            style="@style/DetailInfo"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/tv_vote_avg_caption"
            />
        <TextView
            android:id="@+id/tv_release_date_caption"
            style="@style/DetailCaptions"
            android:textAlignment="viewStart"
            android:gravity="start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_avg_caption"
            android:text="@string/release_date"
            />
        <TextView
            android:id="@+id/tv_release_date"
            style="@style/DetailInfo"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/tv_release_date_caption"
            />



        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_extras"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_videos"
                android:orientation="vertical"
                android:background="#F4F8FF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">


            <TextView
                android:id="@+id/tv_videos_label"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="24dp"
                android:text="@string/videos_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_video_message_text"
                    style="@style/DetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/video_recycler"
                    app:layout_constraintTop_toBottomOf="@id/tv_videos_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                </android.support.v7.widget.RecyclerView>



            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_videos"
                app:layout_constraintLeft_toLeftOf="parent">
                <TextView
                    android:id="@+id/tv_reviews_label"
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:text="@string/reviews_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/tv_reviews"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>